Added code to avoid reloading of panels when switching, and also checking for Chrome on Linux